--- a/docker.yml
+++ b/docker.yml
@@ -22,11 +22,11 @@
       name: docker-ce
       update_cache: yes
   - name: remove container
-    command: docker container rm -f fs-adi-docker
+    command: docker container rm -f CONTAINERNAME
     ignore_errors: true
     
   - name: remove container
-    command: docker container run -d -p 30105:80 --name fs-adi-docker adityaprabhakara/myprod-adi
+    command: docker container run -d -p 30105:80 --name CONTAINERNAME IMAGENAME
 
 
     
