--- a/docker.yml
+++ b/docker.yml
@@ -26,7 +26,7 @@
     ignore_errors: true
     
   - name: remove container
-    command: docker container run -d -p 30105:80 --name CONTAINERNAME IMAGENAME
+    command: docker container run -d -p PORTNUMBER:80 --name CONTAINERNAME IMAGENAME
 
 
     
